--- a/karaf-edi/pom.xml
+++ b/karaf-edi/pom.xml
@@ -26,14 +26,14 @@
 	<version>1.0</version>
 	<packaging>pom</packaging>
 	<url>https://www.mescedia.com</url>
-	<name>mescedia :: Open Source EDI server [apache-karaf-4.0.1] </name>
+	<name>mescedia :: Open Source EDI server [apache-karaf] </name>
 	
 	<properties>
-		<karaf.version>4.0.1</karaf.version>
+		<karaf.version>4.0.5</karaf.version>
 		<mysql.version>5.1.34</mysql.version>
 		<smooks.version>1.6</smooks.version>
 		<hawtio.version>1.4.52</hawtio.version>
-		<camel.version>2.15.2</camel.version>
+		<camel.version>2.16.3</camel.version>
 		<activemq.version>5.12.0</activemq.version>		
 		<install.target>${basedir}/target/dependencies</install.target>
 		<install.archive>apache-karaf-${karaf.version}.tar.gz</install.archive>
@@ -600,10 +600,10 @@
 						<artifactItem>
 							<groupId>org.mescedia.edi</groupId>
 							<artifactId>branding</artifactId>
-							<version>1.0</version>
+							<version>1.1.2</version>
 							<outputDirectory>target/dependencies/apache-karaf-${karaf.version}/lib/ext
 							</outputDirectory>
-							<destFileName>karaf-org.mescedia.edi.branding-1.0.jar
+							<destFileName>karaf-org.mescedia.edi.branding-1.1.2.jar
 							</destFileName>
 						</artifactItem>
 						
