--- a/karaf-edi/pom.xml
+++ b/karaf-edi/pom.xml
@@ -29,12 +29,12 @@
 	<name>mescedia :: Open Source EDI server [apache-karaf] </name>
 	
 	<properties>
-		<karaf.version>4.0.5</karaf.version>
+		<karaf.version>4.0.8</karaf.version>
 		<mysql.version>5.1.34</mysql.version>
 		<smooks.version>1.6</smooks.version>
-		<hawtio.version>1.4.52</hawtio.version>
-		<camel.version>2.16.3</camel.version>
-		<activemq.version>5.12.0</activemq.version>		
+		<hawtio.version>1.4.66</hawtio.version>
+		<camel.version>2.16.4</camel.version>
+		<activemq.version>5.14.1</activemq.version>		
 		<install.target>${basedir}/target/dependencies</install.target>
 		<install.archive>apache-karaf-${karaf.version}.tar.gz</install.archive>
 	</properties>
@@ -600,10 +600,10 @@
 						<artifactItem>
 							<groupId>org.mescedia.edi</groupId>
 							<artifactId>branding</artifactId>
-							<version>1.1.2</version>
+							<version>1.1.4</version>
 							<outputDirectory>target/dependencies/apache-karaf-${karaf.version}/lib/ext
 							</outputDirectory>
-							<destFileName>karaf-org.mescedia.edi.branding-1.1.2.jar
+							<destFileName>karaf-org.mescedia.edi.branding-1.1.4.jar
 							</destFileName>
 						</artifactItem>
 						
@@ -769,7 +769,7 @@
                                         <arguments>
                                           <argument>-s</argument>
                                           <argument>${install.target}/apache-karaf-${karaf.version}</argument>
-                                          <argument>../mescedia</argument>                                          
+                                          <argument>../karaf</argument>                                          
                                         </arguments>
                                         <executable>/bin/ln</executable>
                               </configuration>
