--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-componentdsl</artifactId>
+      <artifactId>camel-saxon</artifactId>
       <version>${camel.version}</version>
     </dependency>
     <dependency>
