added postgresql support beside mariadb/mysql as system-database and as external rdbms references used in mappings a/o camel-routes

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <version>8.0.29</version>
     </dependency>
     <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.5.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>runtime</scope>
