--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,13 +36,19 @@ rest.listen.port=8585
 # smtp.sender=noreply@mescedia.org
 # smtp.receiver=edi.admin@my.email.org
 
-# database
-# =========================
-db.url=jdbc:mysql://localhost/mescedia2
+# =============================================
+# system database settings          ===========
+# mariadb/mysql or postgresql supported =======
+# =============================================
+#
+# mariadb/mysql
+#
+db.url=jdbc:mysql://localhost:3306/mescedia2
 db.username=mescedia
 db.password=mescedia
-
-
-
-
-
+#
+# postgresql
+#
+# db.url=jdbc:postgresql://localhost:5433/mescedia2
+# db.username=mescedia
+# db.password=mescedia
