added sqlite support and made it default for system-db and external-demoerp-db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,12 +43,18 @@ rest.listen.port=8585
 #
 # mariadb/mysql
 #
-db.url=jdbc:mysql://localhost:3306/mescedia2
-db.username=mescedia
-db.password=mescedia
+# db.url=jdbc:mysql://localhost:3306/mescedia2
+# db.username=mescedia
+# db.password=mescedia
 #
 # postgresql
 #
 # db.url=jdbc:postgresql://localhost:5433/mescedia2
 # db.username=mescedia
 # db.password=mescedia
+#
+# sqlite3
+#
+db.url=jdbc:sqlite:data/database/sqlite/mescedia2.db
+db.username=dummy
+db.password=dummy
