--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 # https://camel.apache.org/components/next/others/main.html
 #
 camel.main.name = mescedia-core
-
-# allows source:line precise logging
-camel.main.sourceLocationEnabled=true
 #
 camel.main.allowUseOriginalMessage=true
 #
 #camel.main.allowMultipleCamelContexts=true
 #
 camel.main.debugging=false
-#
 camel.main.dumpRoutes=false
 
+camel.main.messageHistory=true
+camel.main.sourceLocationEnabled=true
 
 # =========================
 # mescedia properties
