added dynamic message processing capabilities (routingSlip), messageModel (pre-)loading & xsdValidation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,9 +41,9 @@ rest.listen.port=8585
 #
 # mariadb/mysql
 #
-# db.url=jdbc:mysql://localhost:3306/mescedia2
-# db.username=mescedia
-# db.password=mescedia
+db.url=jdbc:mysql://localhost:3306/mescedia2
+db.username=mescedia
+db.password=mescedia
 #
 # postgresql
 #
@@ -53,6 +53,6 @@ rest.listen.port=8585
 #
 # sqlite3
 #
-db.url=jdbc:sqlite:data/database/sqlite/mescedia2.db
-db.username=dummy
-db.password=dummy
+# db.url=jdbc:sqlite:data/database/sqlite/mescedia2.db
+# db.username=dummy
+# db.password=dummy
