added schematron (demo) route

--- a/pom.xml
+++ b/pom.xml
@@ -459,6 +459,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-schematron</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
@@ -481,6 +487,10 @@
       <artifactId>json</artifactId>
       <version>20230618</version>
     </dependency>
+
+
+
+
 
   </dependencies>
 
